# mega-shop

./: .env.template  .gitignore  docker-compose.yaml  vetur.config.js
backend/: Dockerfile
backend/src/: alembic.ini  asgi.py  conf.py  database.py  main.py  pyproject.toml  routes.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 23d7f76d17af_add_categories_table.py  45175030ec07_add_users_table.py  66649b541aa1_initial.py  88635d8d2c04_add_table_produtcs.py  a81f4eaaf777_add_categories_table.py  b9487f5c34b8_add_products_table.py  e2e02baa0485_add_users_table.py  f746ddc6d871_initial.py
backend/src/database/: __init__.py  postgres.py  redis.py  schemas.py
backend/src/middlewares/: auth_middleware.py
backend/src/routes/: __init__.py  auth.py  categories.py  products.py  users.py
backend/src/utils/: exceptions.py  password.py  session.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/components/: BaseHeader.vue  Card.vue  CategoryList.vue  ProductDetail.vue  ProductItem.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/product/: [id].vue  index.vue
frontend/src/: nuxt.config.ts  package-lock.json  package.json
frontend/src/components/: BaseButton.vue  BaseHeader.vue  CategoryList.vue  LoadingSpinner.vue  ModalWindow.vue  ProductDetail.vue  ProductList.vue  ProfileMenu.vue  UpdateProfileForm.vue
frontend/src/pages/: login.vue  me.vue  oauth2callback.vue  register.vue
frontend/src/server/: start.sh
frontend/src/utils/: types.ts  (+1 more)
nginx/: nginx.conf
redis/: redis.conf
(+11 files in other folders)
